# MorningAlpha

./: .gitignore  CALIBRATION_AND_FUSION_HANDOFF.md  CALIBRATION_AND_FUSION_HANDOFF_v2.md  CALIBRATION_NOTES.md  DEPLOYMENT_AND_CALIBRATION.md  FINDINGS_2026-04-08.md  ML_EXPERIMENTS.md  ML_PIPELINE_UPDATE_2026-04-08.md  ML_PLAN.md  PREDICTION_LOG_AND_CALIBRATION.md  README.md  pyproject.toml
.github/: daily-data.yml  pages.yml
.github/workflows/: daily-data.yml  fundamentals.yml  monthly-fundamentals.yml  pages.yml  weekly-ml.yml
data/factors/: calibration_models.joblib  correction_models.joblib  live_ic_timeseries.parquet  mlscore_cache.parquet  model_health.json  model_weights.json  predictions_ledger.parquet  spy_inference.parquet  umd_daily.parquet  vix.parquet  vix_inference.parquet
data/latest/: _generated.json  forecast_paths_lstm_clip_v1.json  fundamentals.csv  stocks_1m.csv  stocks_2w.csv  stocks_3m.csv  stocks_6m.csv  ticker_index.json
models/: config.json  feature_config.json  lgbm_binary_breakout_252d_v1.pkl  lgbm_binary_breakout_252d_v1_feature_config.json  lgbm_binary_breakout_252d_v2_feature_config.json  lgbm_binary_breakout_v2.pkl  lgbm_binary_breakout_v2_feature_config.json  lgbm_breakout_cohort_v3.pkl  lgbm_breakout_cohort_v3_feature_config.json  lgbm_breakout_cohort_v3_params.json  lgbm_breakout_medium_v1.pkl  lgbm_breakout_medium_v1_feature_config.json  lgbm_breakout_medium_v1_params.json  lgbm_breakout_v10.pkl  lgbm_breakout_v10_feature_config.json  lgbm_breakout_v10_params.json  lgbm_breakout_v3.pkl  lgbm_breakout_v4.pkl  lgbm_breakout_v5.pkl  lgbm_breakout_v7.pkl  lgbm_breakout_v7_feature_config.json  lgbm_breakout_v7_params.json  lgbm_composite_medium_v1.pkl  lgbm_composite_medium_v1_feature_config.json  lgbm_composite_medium_v1_params.json  lgbm_composite_v10_feature_config.json  lgbm_composite_v10_params.json  lgbm_composite_v2.pkl  lgbm_composite_v4.pkl  lgbm_composite_v5.pkl  lgbm_composite_v6.pkl  lgbm_composite_v7_feature_config.json  lgbm_composite_v7_params.json  lgbm_momentum.pkl  lgbm_v1.pkl  lgbm_v4.pkl  lstm_clip_v1.pt  lstm_clip_v3.pt
morningalpha/: __init__.py  fundamentals.py  keys.py  main.py  spread.py
morningalpha/ml/: __init__.py  backfill.py  backtest.py  baselines.py  data_prep.py  dataset.py  features.py  inference.py  lgbm_model.py  lstm_model.py  lstm_wfcv.py  score.py  sector_dataset.py  set_transformer.py  train.py  train_lstm.py  train_st.py
morningalpha/spread/: access.py  fundamentals.py  indicators.py  metrics.py  search.py  test_indicators.py
morningalpha/web/: .env.production  index.html  package-lock.json  package.json  proxy_server.py  readme.md  serve.py  stock-detail.html  vercel.json  vite.config.ts
morningalpha/web/js/: charts.js  (+2 more)
results/: lgbm_breakout_v7_wfcv.csv  lgbm_composite_v7_wfcv.csv
scripts/: feature_scorecard.py  hpc_job.sh  lstm_ablation.py  lstm_ablation_job.sh  lstm_explore.py  lstm_forecast_plot.py  run_st_experiments.py
(+266 files in other folders)
