[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morningalpha"
version = "1.2.0"  
description = "Morning Alpha"
authors = [
    {name = "Jonathan Schwartz"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",        
    "Programming Language :: Python :: 3.9",    
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "plotly",
    "flask",
    "flask-cors",
    "rich-click",
    "cryptography",
    "yfinance",
    "python-dateutil",
    "lxml",
    "html5lib"
]

[project.scripts]
alpha = "morningalpha.main:routines"

# Keep the hatch.version config so release-please can update both files
[tool.hatch.version]
path = "morningalpha/__init__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]*)['\"]"

[tool.hatch.metadata]
allow-direct-references = true